# moos-ivp-kostas

./: GenRescue.cpp  README.md
missions/alder/: alder.bhv  alder.moos
missions/lab_04/alpha/: alpha.bhv  alpha.moos
missions/lab_05/bravo/: bravo.bhv  bravo.moos
missions/lab_05/bravo_loiter_UUV/: bravo.bhv  bravo.moos
missions/lab_05/bravo_loiter_dbl/: bravo.bhv  bravo.moos
missions/lab_05/bravo_surface_UUV/: bravo.bhv
missions/lab_05/bravo_surface_fair_UUV/: bravo.bhv  bravo.moos
missions/lab_06/s15_alpha_pshare/: shoreside.moos
missions/lab_06/s16_alpha_bravo_pshare/: alpha.moos  bravo.bhv  bravo.moos  launch.sh  myscript  shoreside.moos
missions/lab_06/s18_henry_gilda_refuel/: meta_vehicle.bhv  plug_pMarinePIDV22.moos
missions/lab_06/s19_henry_gilda_auto_refuel/: meta_shoreside.moos
missions/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldShoreBroker.moos  plug_uTimerScript.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h  GenRescue_Info.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  Odometry_old  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+16 files in other folders)
